--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,27 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "build.sh", "use": "@vercel/static-build", "config": { "zeroConfig": true } }
-  ],
-  "routes": [
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(.*)", "dest": "/manage.py" }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "root/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
+      },
+      {
+        "src": "build.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "root/wsgi.py"
+      }
+    ]
+  }
